# word-to-markdown

./: .gitignore  README.md  README_V6.md  VERSION_GUIDE.md  main.py  main_stable.py  main_v2.py  main_v3.py  main_v4.py  main_v5.py  main_v6.py  pyproject.toml  requirements.txt  run.bat
docs/: PRD-word-to-markdown.md  QUICKSTART_V6.md
examples/: README.md
scripts/: run_stable.bat  run_v6.bat
src/word_to_markdown/: __init__.py  __main__.py  cli.py  cli_stable.py  cli_v2.py  cli_v3.py  cli_v4.py  cli_v5.py  cli_v6.py  conversion.py  converter.py  converter_v2.py  converter_v3.py  converter_v4.py  converter_v5.py  converter_v6.py  image_extractor_v1.py  image_extractor_v2.py  markdown_writer.py  markdown_writer_v2.py  markdown_writer_v3.py  models.py  parser.py  parser_v2.py  parser_v3.py  parser_v4.py  parser_v5.py  processor.py  renderer.py  scanner.py  splitter.py  splitter_v2.py  utils.py
tests/: README.md  test_end_to_end.py  test_markdown_writer_v3.py  test_parser_v4_rules.py  test_splitter_v2.py
